changed: deprecation code